[gd_scene load_steps=16 format=3 uid="uid://dfr6gk0jgmt8m"]

[ext_resource type="Script" uid="uid://cjod0g6xqi0y8" path="res://scripts/character.gd" id="1_8e8wm"]
[ext_resource type="PackedScene" uid="uid://ctf75keggkxp2" path="res://objects/display_coins.tscn" id="2_wo6oh"]
[ext_resource type="Texture2D" uid="uid://uqx3mgh6u0tj" path="res://assets/LisgarGamePlayer.png" id="3_fpve4"]
[ext_resource type="FontFile" uid="uid://cdlmqd110qrjr" path="res://assets/fonts/PixelOperator8.ttf" id="4_tuj8d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_umo7v"]
atlas = ExtResource("3_fpve4")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaxm0"]
atlas = ExtResource("3_fpve4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffuey"]
atlas = ExtResource("3_fpve4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0xpd"]
atlas = ExtResource("3_fpve4")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ocib"]
atlas = ExtResource("3_fpve4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yvbe"]
atlas = ExtResource("3_fpve4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_scx6r"]
atlas = ExtResource("3_fpve4")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6djgk"]
atlas = ExtResource("3_fpve4")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ffokg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umo7v")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaxm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffuey")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0xpd")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ocib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yvbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scx6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6djgk")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m1rqw"]
radius = 5.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dmw88"]
radius = 5.0
height = 16.0

[node name="Character" type="CharacterBody2D" groups=["player"]]
z_index = 20
position = Vector2(8, -8)
collision_layer = 18
script = ExtResource("1_8e8wm")

[node name="coins" parent="." instance=ExtResource("2_wo6oh")]
offset_left = -190.0
offset_top = -105.0
offset_right = -114.0
offset_bottom = -89.0

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 20
sprite_frames = SubResource("SpriteFrames_ffokg")
animation = &"fall"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_m1rqw")
one_way_collision_margin = 0.0

[node name="deathMessage" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Big Text" type="Label" parent="deathMessage"]
layout_mode = 0
offset_left = -84.0
offset_top = -50.0
offset_right = 84.0
offset_bottom = -26.0
theme_override_fonts/font = ExtResource("4_tuj8d")
theme_override_font_sizes/font_size = 24
text = "You Died!"

[node name="Label" type="Label" parent="deathMessage"]
layout_mode = 0
offset_left = -114.0
offset_top = -26.0
offset_right = 114.0
offset_bottom = -10.0
theme_override_fonts/font = ExtResource("4_tuj8d")
theme_override_font_sizes/font_size = 0
text = "Press e to dismiss"

[node name="PlatformRayCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 11)
collision_mask = 4

[node name="spikecollider" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="spikecollider"]
z_index = 3
shape = SubResource("CapsuleShape2D_dmw88")

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="body_entered" from="spikecollider" to="." method="_on_spike_collider_entered"]
